[project]
name = "los-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "cpmpy>=0.9.23",
    "ortools>=9.11.4210",
    "pre-commit>=4.0.1",
    "pysat>=3.2.1",
    "pytest>=8.3.3",
    "python-sat[aiger,approxmc,cryptosat,pblib]>=1.8.dev13",
    "setuptools>=75.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "C"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
